--- a/Parse-Client/Base.lproj/Main.storyboard
+++ b/Parse-Client/Base.lproj/Main.storyboard
@@ -30,7 +30,6 @@
         <!--Chat View Controller-->
         <scene sceneID="odn-iw-Dg1">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2nP-1s-e0e" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="chatViewController" automaticallyAdjustsScrollViewInsets="NO" id="zfa-ac-131" customClass="ChatViewController" customModule="Parse_Client" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Qsq-hO-fIJ"/>
@@ -44,11 +43,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="607"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="chatCell" rowHeight="71" id="QNG-nN-xXH">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="chatCell" rowHeight="71" id="QNG-nN-xXH" customClass="ChatMessageCellTableViewCell" customModule="Parse_Client" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QNG-nN-xXH" id="z9Z-fZ-com">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="70.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0WW-bM-r6q">
@@ -65,6 +64,9 @@
                                                 <constraint firstItem="0WW-bM-r6q" firstAttribute="top" secondItem="z9Z-fZ-com" secondAttribute="topMargin" constant="17" id="Iet-LS-afi"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messageLabel" destination="0WW-bM-r6q" id="RHl-bz-vLb"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
@@ -110,6 +112,7 @@
                         <outlet property="sendButton" destination="TIb-QU-Z6D" id="CXd-nh-iIF"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2nP-1s-e0e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="32.799999999999997" y="794.75262368815595"/>
         </scene>
